@@ -1,7 +1,7 @@
 #! @SH@
 #
 #     Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
-#                   1998-2000  Roland Rosenfeld <roland@spinnaker.de>
+#                   1998-2001  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -73,15 +73,26 @@ for method in $METHODS ; do
   eval ${method}_query \""$@"\" >> $collection || true
 done
 
-case "$SORT_OUTPUT" in
-    false|no)
-	$libdir/munge-keeporder $collection | $TAC > $collection.uniq
-	;;
-    *name)
-	$libdir/munge $collection | sort -f +1 > $collection.uniq
+case "$KEEP_DUPES" in
+    true|yes)
+	MUNGE=cat
+	MUNGE_KEEPORDER=cat
 	;;
     *)
-	$libdir/munge $collection | sort -f > $collection.uniq
+	MUNGE=$libdir/munge
+	MUNGE_KEEPORDER=$libdir/munge-keeporder
+	;;
+esac
+
+case "$SORT_OUTPUT" in
+    false|no)
+	$MUNGE_KEEPORDER $collection | $TAC > $collection.uniq
+	;;
+    *name)
+	$MUNGE $collection | sort -f +1 > $collection.uniq
+	;;
+    *)
+	$MUNGE $collection | sort -f > $collection.uniq
 	;;
 esac
 
